--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Taxi_app</string>
     <!-- All app strings. -->
     <string name="toast_data_update">Данные обновлены</string>
+    <string name="btn_text_further">Далее</string>
     <!-- Change user data strings. -->
     <string name="change_name_enter_name_description_hint">Ведите имя</string>
     <string name="change_user_name_edt_name_hint">Как вас зовут?</string>
@@ -50,6 +51,9 @@
     <string name="become_driver_car_number_is_successful_toast">Номер авто успешно добавлен</string>
     <string name="become_driver_car_is_successful_toast">Данные об авто добавлены</string>
     <string name="become_driver_last_name_is_successful_toast">Фамилия успешно добавлено</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="become_driver_photo_text_view_description_add_photo">Добавьте фото</string>
+    <string name="become_driver_photo_text_view_photo_car_description">Фото авто</string>
+    <string name="become_driver_photo_text_view_photo_driver_description">Ваше фото</string>
+    <string name="become_driver_photo_text_view_photo_license_description">Фото вод. удостоверенея</string>
+    <string name="become_drivar_toast_orders_done">Заявка отправлена</string>
 </resources>
